--- a/src/components/sbb-button/sbb-button.scss
+++ b/src/components/sbb-button/sbb-button.scss
@@ -41,58 +41,6 @@
   }
 }
 
-.sbb-button {
-  @include buttonReset;
-  @include stretch(width);
-  @include text-xs--bold;
-
-  position: relative;
-  display: flex;
-  gap: var(--sbb-button-gap);
-  align-items: center;
-  justify-content: center;
-  text-align: left;
-  transition-duration: var(--sbb-button-transition-duration);
-  transition-timing-function: var(--sbb-button-transition-easing-function);
-  transition-property: color;
-  min-height: var(--sbb-button-min-height);
-  border-radius: var(--sbb-button-border-radius);
-
-  // The padding block value is only a minimal padding to preserve a padding if the content becomes larger than intended.
-  // Positioning of the content is made by flexbox vertical centering.
-  // The real padding displayed is larger than the defined value below.
-  padding-block: var(--sbb-button-padding-block-min);
-  padding-inline: var(--sbb-button-padding-inline);
-  color: var(--sbb-button-color-default-text);
-  -webkit-font-smoothing: antialiased;
-  cursor: pointer;
-
-  // Renders background and border in the background absolute to enable the hover animation
-  &::before {
-    position: absolute;
-    content: '';
-    inset: 0;
-    border: var(--sbb-button-border-width) solid var(--sbb-button-color-default-border);
-    border-radius: var(--sbb-button-border-radius);
-    background-color: var(--sbb-button-color-default-background);
-    transition-duration: var(--sbb-button-transition-duration);
-    transition-timing-function: var(--sbb-button-transition-easing-function);
-    transition-property: inset, background-color, border-color, box-shadow;
-
-    @include ifForcedColors {
-      border: #{px-to-rem-build(1)} solid windowText;
-    }
-  }
-
-  &:focus-visible::before {
-    @include focusOutline;
-  }
-}
-
-a.sbb-button {
-  text-decoration: none;
-}
-
 .sbb-button--primary {
   &.sbb-button--negative {
     --sbb-button-color-active-background: var(--sbb-color-cloud-default);
@@ -204,19 +152,6 @@ a.sbb-button {
   }
 }
 
-.sbb-button__icon {
-  fill: currentcolor;
-
-  @include ifForcedColors {
-    fill: ButtonText;
-  }
-
-  display: block;
-  width: var(--sbb-button-icon-size);
-  height: var(--sbb-button-icon-size);
-  color: currentcolor;
-}
-
 .sbb-button--size-m {
   --sbb-button-border-width: var(--sbb-border-width-1x);
   --sbb-button-min-height: var(--sbb-size-button-m-min-height);
@@ -225,6 +160,58 @@ a.sbb-button {
   @include mq($from: medium) {
     --sbb-button-padding-inline: var(--sbb-spacing-fixed-8x);
   }
+}
+
+.sbb-button {
+  @include buttonReset;
+  @include stretch(width);
+  @include text-xs--bold;
+
+  position: relative;
+  display: flex;
+  gap: var(--sbb-button-gap);
+  align-items: center;
+  justify-content: center;
+  text-align: left;
+  transition-duration: var(--sbb-button-transition-duration);
+  transition-timing-function: var(--sbb-button-transition-easing-function);
+  transition-property: color;
+  min-height: var(--sbb-button-min-height);
+  border-radius: var(--sbb-button-border-radius);
+
+  // The padding block value is only a minimal padding to preserve a padding if the content becomes larger than intended.
+  // Positioning of the content is made by flexbox vertical centering.
+  // The real padding displayed is larger than the defined value below.
+  padding-block: var(--sbb-button-padding-block-min);
+  padding-inline: var(--sbb-button-padding-inline);
+  color: var(--sbb-button-color-default-text);
+  -webkit-font-smoothing: antialiased;
+  cursor: pointer;
+
+  // Renders background and border in the background absolute to enable the hover animation
+  &::before {
+    position: absolute;
+    content: '';
+    inset: 0;
+    border: var(--sbb-button-border-width) solid var(--sbb-button-color-default-border);
+    border-radius: var(--sbb-button-border-radius);
+    background-color: var(--sbb-button-color-default-background);
+    transition-duration: var(--sbb-button-transition-duration);
+    transition-timing-function: var(--sbb-button-transition-easing-function);
+    transition-property: inset, background-color, border-color, box-shadow;
+
+    @include ifForcedColors {
+      border: #{px-to-rem-build(1)} solid windowText;
+    }
+  }
+
+  &:focus-visible::before {
+    @include focusOutline;
+  }
+}
+
+a.sbb-button {
+  text-decoration: none;
 }
 
 // stylelint-disable plugin/stylelint-bem-namics
@@ -238,23 +225,27 @@ a.sbb-button {
 }
 // stylelint-enable plugin/stylelint-bem-namics
 
-.sbb-button--visual-only {
-  width: fit-content;
-  user-select: none;
-}
+// If the the device can hover over elements with ease
+@include hover-mq($hover: true) {
+  .sbb-button:hover:not(:disabled) {
+    --sbb-button-translate-y-content-hover: #{px-to-rem-build(-1)};
+    --sbb-button-shadow-1-offset-y: calc(
+      0.5 * var(--sbb-shadow-elevation-level-3-shadow-1-offset-y)
+    );
+    --sbb-button-shadow-1-blur: calc(0.5 * var(--sbb-shadow-elevation-level-3-shadow-1-blur));
+    --sbb-button-shadow-2-blur: calc(0.5 * var(--sbb-shadow-elevation-level-3-shadow-2-blur));
 
-.sbb-button--icon-only {
-  --sbb-button-padding-inline: 0;
-  --icon-margin-inline-end: 0;
+    color: var(--sbb-button-color-hover-text);
 
-  width: var(--sbb-button-min-height);
-  justify-content: center;
+    &::before {
+      inset: calc(var(--sbb-button-border-width) * -1);
+      background-color: var(--sbb-button-color-hover-background);
+      border-color: var(--sbb-button-color-hover-border);
 
-  &.sbb-button:disabled::after {
-    inset-inline: unset;
-
-    // Width of line through is fixed in icon variant
-    width: var(--sbb-button-icon-size);
+      @include ifForcedColors {
+        border-color: Highlight;
+      }
+    }
   }
 }
 
@@ -288,35 +279,30 @@ a.sbb-button {
   }
 }
 
-// If the the device can hover over elements with ease
-@include hover-mq($hover: true) {
-  .sbb-button:hover:not(:disabled) {
-    --sbb-button-translate-y-content-hover: #{px-to-rem-build(-1)};
-    --sbb-button-shadow-1-offset-y: calc(
-      0.5 * var(--sbb-shadow-elevation-level-3-shadow-1-offset-y)
-    );
-    --sbb-button-shadow-1-blur: calc(0.5 * var(--sbb-shadow-elevation-level-3-shadow-1-blur));
-    --sbb-button-shadow-2-blur: calc(0.5 * var(--sbb-shadow-elevation-level-3-shadow-2-blur));
-
-    color: var(--sbb-button-color-hover-text);
-
-    &::before {
-      inset: calc(var(--sbb-button-border-width) * -1);
-      background-color: var(--sbb-button-color-hover-background);
-      border-color: var(--sbb-button-color-hover-border);
-
-      @include ifForcedColors {
-        border-color: Highlight;
-      }
-    }
-  }
-}
-
 .sbb-button:active:not(:disabled) {
   &::before {
     color: var(--sbb-button-color-active-text);
     background-color: var(--sbb-button-color-active-background);
     border-color: var(--sbb-button-color-active-border);
+  }
+}
+
+.sbb-button--static {
+  user-select: none;
+}
+
+.sbb-button--icon-only {
+  --sbb-button-padding-inline: 0;
+  --icon-margin-inline-end: 0;
+
+  width: var(--sbb-button-min-height);
+  justify-content: center;
+
+  &.sbb-button:disabled::after {
+    inset-inline: unset;
+
+    // Width of line through is fixed in icon variant
+    width: var(--sbb-button-icon-size);
   }
 }
 
@@ -334,6 +320,19 @@ a.sbb-button {
 
 .sbb-button__label--hidden {
   display: none;
+}
+
+.sbb-button__icon {
+  fill: currentcolor;
+
+  @include ifForcedColors {
+    fill: ButtonText;
+  }
+
+  display: block;
+  width: var(--sbb-button-icon-size);
+  height: var(--sbb-button-icon-size);
+  color: currentcolor;
 }
 
 .sbb-button__opens-in-new-window {
