fix: control pointer events

--- a/src/components/sbb-button/sbb-button.scss
+++ b/src/components/sbb-button/sbb-button.scss
@@ -4,6 +4,7 @@
 
 :host {
   display: inline-block;
+  pointer-events: none;
 
   --sbb-button-icon-size: var(--sbb-size-icon-ui-small);
   --sbb-button-disabled-line-through-height: var(--sbb-border-width-2x);
@@ -165,6 +166,8 @@
   @include stretch(width);
   @include text-xs--bold;
   @include fontSmoothing;
+
+  pointer-events: auto;
 
   // Reset for link variant
   text-decoration: none;
