--- a/src/components/sbb-action-group/sbb-action-group.scss
+++ b/src/components/sbb-action-group/sbb-action-group.scss
@@ -2,21 +2,26 @@
 // travel the shadow boundary are defined through this mixin
 @include host-component-properties;
 
+$breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
+$vertical-orientations: (
+  start: flex-start,
+  center: center,
+  stretch: stretch,
+  end: flex-end,
+);
+$horizontal-orientations: (
+  start: flex-start,
+  center: center,
+  stretch: space-between,
+  end: flex-end,
+);
+
 @mixin vertical-action-group {
-  .action-group--align-start {
-    --sbb-action-group-align-items: flex-start;
-  }
-
-  .action-group--align-center {
-    --sbb-action-group-align-items: center;
-  }
-
-  .action-group--align-stretch {
-    --sbb-action-group-align-items: stretch;
-  }
-
-  .action-group--align-end {
-    --sbb-action-group-align-items: flex-end;
+  @each $key, $value in $vertical-orientations {
+    /* stylelint-disable-next-line plugin/stylelint-bem-namics */
+    .action-group--align-#{$key} {
+      --sbb-action-group-align-items: #{$value};
+    }
   }
 
   .action-group {
@@ -57,20 +62,11 @@
 }
 
 :host([orientation='horizontal']) {
-  .action-group--align-start {
-    --sbb-action-group-justify-content: flex-start;
-  }
-
-  .action-group--align-center {
-    --sbb-action-group-justify-content: center;
-  }
-
-  .action-group--align-stretch {
-    --sbb-action-group-justify-content: space-between;
-  }
-
-  .action-group--align-end {
-    --sbb-action-group-justify-content: flex-end;
+  @each $key, $value in $horizontal-orientations {
+    /* stylelint-disable-next-line plugin/stylelint-bem-namics */
+    .action-group--align-#{$key} {
+      --sbb-action-group-justify-content: #{$value};
+    }
   }
 
   .action-group {
@@ -90,100 +86,42 @@
   }
 }
 
-// horizontal-from overrides orientation vertical
-:host([orientation='vertical'][horizontal-from='zero']),
-:host([orientation='vertical'][horizontal-from='micro']),
-:host([orientation='vertical'][horizontal-from='small']),
-:host([orientation='vertical'][horizontal-from='medium']),
-:host([orientation='vertical'][horizontal-from='large']),
-:host([orientation='vertical'][horizontal-from='wide']),
-:host([orientation='vertical'][horizontal-from='ultra']) {
-  --sbb-action-group-orientation: row;
+@each $breakpoint in $breakpoints {
+  // horizontal-from overrides orientation vertical
+  :host([orientation='vertical'][horizontal-from='#{$breakpoint}']) {
+    --sbb-action-group-orientation: row;
 
-  .action-group--align-start {
-    --sbb-action-group-justify-content: flex-start;
-    --sbb-action-group-align-items: unset;
+    @each $key, $value in $horizontal-orientations {
+      /* stylelint-disable-next-line plugin/stylelint-bem-namics */
+      .action-group--align-#{$key} {
+        --sbb-action-group-justify-content: #{$value};
+        --sbb-action-group-align-items: unset;
+      }
+
+      .action-group {
+        justify-content: var(--sbb-action-group-justify-content);
+      }
+
+      ::slotted([align-self='start']) {
+        margin-inline-end: auto;
+      }
+
+      ::slotted([align-self='center']) {
+        margin-inline: auto;
+      }
+
+      ::slotted([align-self='end']) {
+        margin-inline-start: auto;
+      }
+    }
   }
 
-  .action-group--align-center {
-    --sbb-action-group-justify-content: center;
-    --sbb-action-group-align-items: unset;
-  }
-
-  .action-group--align-stretch {
-    --sbb-action-group-justify-content: space-between;
-    --sbb-action-group-align-items: unset;
-  }
-
-  .action-group--align-end {
-    --sbb-action-group-justify-content: flex-end;
-    --sbb-action-group-align-items: unset;
-  }
-
-  .action-group {
-    justify-content: var(--sbb-action-group-justify-content);
-  }
-
-  ::slotted([align-self='start']) {
-    margin-inline-end: auto;
-  }
-
-  ::slotted([align-self='center']) {
-    margin-inline: auto;
-  }
-
-  ::slotted([align-self='end']) {
-    margin-inline-start: auto;
-  }
-}
-
-// horizontal-from overrides orientation horizontal
-:host([orientation='horizontal'][horizontal-from='zero']),
-:host([orientation='vertical'][horizontal-from='zero']) {
-  @include mq($to: zero) {
-    @include vertical-action-group-element-align-reset;
-  }
-}
-
-:host([orientation='horizontal'][horizontal-from='micro']),
-:host([orientation='vertical'][horizontal-from='micro']) {
-  @include mq($to: micro) {
-    @include vertical-action-group-element-align-reset;
-  }
-}
-
-:host([orientation='horizontal'][horizontal-from='small']),
-:host([orientation='vertical'][horizontal-from='small']) {
-  @include mq($to: small) {
-    @include vertical-action-group-element-align-reset;
-  }
-}
-
-:host([orientation='horizontal'][horizontal-from='medium']),
-:host([orientation='vertical'][horizontal-from='medium']) {
-  @include mq($to: medium) {
-    @include vertical-action-group-element-align-reset;
-  }
-}
-
-:host([orientation='horizontal'][horizontal-from='large']),
-:host([orientation='vertical'][horizontal-from='large']) {
-  @include mq($to: large) {
-    @include vertical-action-group-element-align-reset;
-  }
-}
-
-:host([orientation='horizontal'][horizontal-from='wide']),
-:host([orientation='vertical'][horizontal-from='wide']) {
-  @include mq($to: wide) {
-    @include vertical-action-group-element-align-reset;
-  }
-}
-
-:host([orientation='horizontal'][horizontal-from='ultra']),
-:host([orientation='vertical'][horizontal-from='ultra']) {
-  @include mq($to: ultra) {
-    @include vertical-action-group-element-align-reset;
+  // horizontal-from overrides orientation horizontal
+  :host([orientation='horizontal'][horizontal-from='#{$breakpoint}']),
+  :host([orientation='vertical'][horizontal-from='#{$breakpoint}']) {
+    @include mq($to: #{$breakpoint}) {
+      @include vertical-action-group-element-align-reset;
+    }
   }
 }
 
