--- a/src/components/sbb-link/sbb-link.scss
+++ b/src/components/sbb-link/sbb-link.scss
@@ -4,6 +4,9 @@
 
 :host {
   display: inline-block;
+
+  // See 'Click event handling on action elements' section in CODING_STANDARDS.md
+  // https://github.com/lyne-design-system/lyne-components/blob/master/CODING_STANDARDS.md#click-event-handling-on-action-elements
   pointer-events: none;
 
   --text-color-normal: var(--sbb-color-granite-default);
@@ -28,6 +31,9 @@
   text-decoration: none;
   word-break: break-word;
   fill: currentcolor;
+
+  // See 'Click event handling on action elements' section in CODING_STANDARDS.md
+  // https://github.com/lyne-design-system/lyne-components/blob/master/CODING_STANDARDS.md#click-event-handling-on-action-elements
   pointer-events: auto;
 
   &:focus-visible {
